# arm_kickstart

./: .clang-tidy  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: sources.cmake
btl/: main.c  soc.ld  sources.cmake
cfg/: target.gctmrg
cmake/: CodeCoverage.cmake  common.cmake  cppcheck.cmake  merge_tool.cmake  parse_changelog.py  target.cmake  test.cmake  toolchain-arm-none-eabi.cmake  toolchain-clang.cmake
hal/test/: hal.c  hal.h  sources.cmake
jenkins/: build-release.sh  build-test.sh  misra-rules.txt  misra.json  test.sh
